task1/test_results_defects/infer_test/return_local/report.txt
#0
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/return_local.c:19: error: Stack Variable Address Escape
  Pulse found a potential stack variable address escape. Address of stack variable `buf` is returned by the function.
  17. {
  18. 	int buf[5];
  19. 	return buf;/*Tool should detect this line as error*/ /*ERROR: return - pointer to local variable */
       ^
  20. }
  21. 

Found 1 issue
                                    Issue Type(ISSUED_TYPE_ID): #
  Stack Variable Address Escape(STACK_VARIABLE_ADDRESS_ESCAPE): 1
